open-policy-agent/open-policy-agent/policy/gen-allowed-image-registry/samples/repo-must-be-acr/allowed-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-allowed
spec:
  containers:
    - name: opa
      image: escoacrprod01.azurecr.io/esco/appdynamics/cluster-agent-operator:0.6.11
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
